--- a/examples/boot-api/src/main/webapp/index.html
+++ b/examples/boot-api/src/main/webapp/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Spring Boot Web Service示例</title>
+<title>Spring Boot Web Service demo </title>
 </head>
 <body>
 
-<h4>1. 顺序访问P2P图书馆 API:</h4>
+<h4>1. P2P library API:</h4>
 
 step1:
 <ul>
-<li><a href="http://localhost:8080/api/books?page=0&size=10">列出第一页图书(每页10项)</a></li>
-<li><a href="http://localhost:8080/api/books?page=1&size=2">列出第二页图书(每页2项)</a></li>
+<li><a href="http://localhost:8080/api/books?page=0&size=10">list page1 book page = 10</a></li>
+<li><a href="http://localhost:8080/api/books?page=1&size=2">list page2 book page = 2</a></li>
 </ul>
 
 step2:
 
 <ul>
-<li><a href="http://localhost:8080/api/accounts/login?email=calvin.xiao@springside.io&password=springside">登录为Calvin(注意保存Token)</a></li>
+<li><a href="http://localhost:8080/api/accounts/login?email=calvin.xiao@springside.io&password=springside"> login user == Calvin( save Token)</a></li>
 <li> <a href="http://localhost:8080/api/books/3/request?token=replaceme">Calvin请求借阅David的书 (手工替换URL中的Token为前一步保存的值)</a></li>
 <li> <a href="http://localhost:8080/api/myborrowedbook?token=replaceme">列出Cavlin借阅的图书(替换token)</a></li>
 </ul>
@@ -44,7 +44,7 @@ other flow:
 </ul>
 
 
-<h4>2. 访问下列应用管理Endpoint:</h4>
+<h4>2. app manage Endpoint:</h4>
 <ul>
 <li><a href="http://localhost:7002/health">http://localhost:7002/health</a></li>
 <li><a href="http://localhost:7002/info">http://localhost:7002/info</a></li>
@@ -55,13 +55,13 @@ other flow:
 </ul>
 
 
-<h4>3. JMX通过Restful的jolokia访问:</h4>
+<h4>3. JMX Restful jolokia :</h4>
 <ul>
 <li><a href="http://localhost:7002/jolokia/read/Tomcat:type=Connector,port=8080">Tomcat MBean</a></li>
 </ul>
 
 
-<h4>4. 在开发Profile下的H2 Console，用于查看内存中数据库的内容:</h4>
+<h4>4. in coding Profile , this is the H2 Console,to checkout data in memery:</h4>
 <ul>
 <li><a href="http://localhost:8080/h2">http://localhost:8080/h2/</a></li>
 </ul>
